src/objects/JiraAttributesMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <label>Attribute Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constant_Value__c</fullName>
        <label>Constant Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Service_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Value_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Value Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Field__c</fullName>
        <label>SF Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>JiraAttributesMapping</label>
    <pluralLabel>JiraAttributesMappings</pluralLabel>
    <validationRules>
        <fullName>IsValueLooup_Check</fullName>
        <active>false</active>
        <description>check if is value lookup is checked, then SF Field must be populated</description>
        <errorConditionFormula>IF( AND ( Is_Value_Lookup__c = true,  SF_Field__c = null),true,false)</errorConditionFormula>
        <errorDisplayField>SF_Field__c</errorDisplayField>
        <errorMessage>Sf Field must be pouplated if is Value Lookup is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Field_Check</fullName>
        <active>true</active>
        <description>to check if Is Mandatory is checked, then either constant value or Sf field must be populated</description>
        <errorConditionFormula>IF(AND (  Is_Mandatory__c =true , SF_Field__c = null , Constant_Value__c = null),true,false)</errorConditionFormula>
        <errorDisplayField>Is_Mandatory__c</errorDisplayField>
        <errorMessage>Either SF Field or Constant Value must be populated, if record is mandatory</errorMessage>
    </validationRules>
</CustomObject>